package com.example.demo.demos.LocalActive.DTO;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class NeighborSupportTaskResponse {
    private Long taskId;
    private String status;
}
